# SimpleSvgFloorplan

./: CMakeLists.txt  README.md  conanfile.txt
cmake/: Conan.cmake
src/: CMakeLists.txt  SvgCompiler.cpp  SvgCompiler.h  main.cpp
src/lib/: CMakeLists.txt  PhysicalUnits.h  Point.h  SvgCompiler.cpp  SvgCompiler.h  SvgGenerator.cpp  SvgGenerator.h
test/: CMakeLists.txt  tests.cpp
